[package]
name = "skyseeker-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing-off = ["tracing/max_level_off", "tracing/release_max_level_off"]

[dependencies]
astro = "2.0.0"
bincode = { workspace = true }
chrono = { workspace = true, optional = true }
sofars = "0.3.3"
thiserror = "2.0.17"
tracing = { workspace = true }
zstd = { workspace = true }